# mch2022-workshop-nlp

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
examples/: display.py  sampletext.txt
nlp/: main.py  run.py
nlp/routers/v1/: main.py
nlp/routers/v1/predict/: main.py  patterns.jsonl  schema.py
nlp/routers/v1/predict/utils/: extract.py  tfidf.py  transforms.py
