[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Joey Dreijer <jdreijer@schubergphilis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
spacy = "^3.4.0"
uvicorn = "^0.18.2"
lxml = "^4.9.1"
spacy-html-tokenizer = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
